Fix mobile css overlap

--- a/src/screens/Home/Home.scss
+++ b/src/screens/Home/Home.scss
@@ -41,6 +41,7 @@
     }
     @media screen and (max-width: $breakpoint-mobile) {
       height: 200px;
+      padding: 0;
     }
   }
 
